fix(EditProfile): fix avatar z-index

--- a/src/features/EditProfile/EditProfile.module.css
+++ b/src/features/EditProfile/EditProfile.module.css
@@ -9,7 +9,7 @@
       @apply relative flex w-full items-center justify-center py-4 md:w-[30%];
 
       & .avatarWrapper {
-        @apply relative z-30;
+        @apply relative;
 
         & .icon {
           @apply h-8 w-8 stroke-1.5;
@@ -17,7 +17,7 @@
 
         & .uploadAvatar {
           @apply flex h-20 w-20 items-center justify-center md:h-24 md:w-24;
-          @apply absolute inset-0 z-30 rounded-full;
+          @apply absolute inset-0 z-[25] rounded-full;
           @apply bg-black bg-opacity-20  text-white;
         }
 
